java: allow reflection in java.util for publish